Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29499

Qt Assistant: Ctrl+W shortcut on last open tab causes it to crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.2
    • 5.0.1
    • Tools: Assistant
    • None
    • Windows 7 (64-bit), Windows 8 (64-bit)
      Prebuilt binaries - open source and commercial versions of the MinGW build of 5.0.1.

    • 7598c22441b357d8bdb768f4ec31deb0cb6655e9

    Description

      When I use the Ctrl+W shortcut to close tabs, if I accidentally do it on the last open tab, assistant crashes

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            heimrich Karsten Heimrich
            bchaudhuri bc
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes