Ctrl+W shortcut on last open tab causes Assistant to crash.

Task-number: QTBUG-29499

This happend as nobody did inform the menu about the page changes,
the shortcut remained active even for the last viewer. Also make
some constructors and functions private, so we can no longer mess
from the outside with the viewers, except thru OpenPagesManager.

Change-Id: I2675996d4b30ab8b1db657e5157b497a73b96196
Reviewed-by: Christian Kandeler <christian.kandeler@digia.com>